2001-12-08  Alan Modra  <amodra@bigpond.net.au>

	* gas/all/incbin.s: Add spaces before directives.

Fri Dec  7 09:16:07 2001  Jeffrey A Law  (law@cygnus.com)

	* gas/hppa/parse/linesepbug.s: Restore to its original form,
	reverting change of July 19, 2000.

2001-12-05  Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/xscale.s, gas/arm/xscale.d (pld tests): PLD instruction has
	no post-indexed addressing modes.

2001-11-25  Andreas Jaeger  <aj@suse.de>

	* gas/all/gas.exp (incbin): Fix condition.

Fri Nov 23 09:20:43 2001  Jeffrey A Law  (law@cygnus.com)

	* gas/all/gas.exp (incbin): Do not run on the PA.

	* gas/hppa/parse/parse.exp: Expect failure on line separator bug.

2001-11-16  Chris Demetriou  <cgd@broadcom.cOm>

	* gas/mips/elf-rel5.s, gas/mips/elf-rel5.s: New test
	to test symbol plus offset relocations in various ways.
	* gas/mips/mips.exp: Run new test.

2001-11-15  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/booke.d: Modify reloc and target matches for powerpc64.

2001-11-11  Timothy Wall  <twall@alum.mit.edu>

	* gas/tic54x/sections.[sd]: Check for named, initialized sections
	defaulting to CODE and DATA.
	* gas/tic54x/align.[sd]: While breaking compatibility with TI's
	assembler, the difference is not worth the effort to fix.  We'd
	prefer the assembler *not* fill the section alignment.
	* gas/tic54x/all-opcodes.d: Verify Lmem opcodes have proper
	length.
	* gas/tic54x/labels.s: Document differences from TI tools.
	* gas/tic54x/extaddr.d: Match output.
	* gas/all/gas.exp: On c54x targets, don't do any tests that use
	p2align.
	* gas/macros/macros.exp: Expect failure matching use of .ascii.

2001-11-12  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/mips.exp: Change naming of some conditionals to reflect
	the object format they actually mean. Don't try mips-abi32 and
	mips-abi32-pic tests for ecoff.

2001-11-11  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/bspec-2.d, gas/mmix/bspec-1.d, gas/mmix/comment-1.d: