@@ -7,11 +7,11 @@
 .*: .*
 
 Contents of section .data:
- 0000 2e646174 610a2e69 6e636269 6e202269  .data..incbin "i
- 0010 6e636269 6e2e7322 0a2e696e 6362696e  ncbin.s"..incbin
- 0020 2022696e 6362696e 2e73222c 302c3238   "incbin.s",0,28
- 0030 0a2e696e 6362696e 2022696e 6362696e  ..incbin "incbin
- 0040 2e73222c 31352c39 0a2e7032 616c6967  .s",15,9..p2alig
- 0050 6e20340a 2e646174 610a2e69 6e636269  n 4..data..incbi
- 0060 6e202269 6e636269 6e2e7322 0a2e696e  n "incbin.s"..in
- 0070 696e6362 696e2e73 22000000 00000000  incbin.s".......
+ 0000 202e6461 74610a20 2e696e63 62696e20   .data. .incbin 
+ 0010 22696e63 62696e2e 73220a20 2e696e63  "incbin.s". .inc
+ 0020 62696e20 22696e63 62696e2e 73222c30  bin "incbin.s",0
+ 0030 2c32380a 202e696e 6362696e 2022696e  ,28. .incbin "in
+ 0040 6362696e 2e73222c 31352c39 0a202e70  cbin.s",15,9. .p
+ 0050 32616c69 676e2034 0a202e64 6174610a  2align 4. .data.
+ 0060 202e696e 6362696e 2022696e 6362696e   .incbin "incbin
+ 0070 2e73220a 20202269 6e636269 6e2e0000  .s".  "incbin...
